--- a/ReactJs/vlava-website/public/index.html
+++ b/ReactJs/vlava-website/public/index.html
@@ -15,6 +15,35 @@
       href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Open+Sans:300,400,600,700"
     />
 
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="js/rs-plugin/css/settings.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/isotope.css"
+      media="screen"
+    />
+    <link rel="stylesheet" href="css/flexslider.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="js/fancybox/jquery.fancybox.css"
+      type="text/css"
+      media="screen"
+    />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Open+Sans:300,400,600,700"
+    />
+
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- skin -->
+    <link rel="stylesheet" href="skin/default.css" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
